--- a/ch1_standdeg_canopy.Rmd
+++ b/ch1_standdeg_canopy.Rmd
@@ -183,7 +183,7 @@ abcover_vegcover_plot
 
 ##### (B) Percent cover by lifeform by native/nonnative status 
 
-```{r cover x status x lifeform, include = TRUE}
+```{r cover x status x lifeform - data prep, include = TRUE}
 # line 933 from Ch1_Degradation_original.Rmd
 
 # data prep
@@ -196,56 +196,130 @@ abcover_bylf_bystatus <- abcover_full_v_omitground %>%
 view(abcover_bylf_bystatus) # prints to new tab
 
 #write.csv(abcover_bylf_bystatus,"processed/percentcover_bystatus_bylifeform.csv")
-cover_statuslf_matrix <- read.csv("percentcover_bystatus_bylifeform_matrix.csv", header = TRUE)
+cover_statuslf_matrix <- read.csv("percentcover_bystatus_bylifeform_matrix.csv", header = TRUE) %>% mutate(lifeform = case_when(lifeform == "herb" ~ "forb", 
+                               TRUE ~ lifeform))
+cover_statuslf_matrix <- cover_statuslf_matrix %>% 
+  mutate(standtype = fct_relevel(standtype, 
+            "intact", "matrix", "degraded"))
+```
 
-# calculate means and SD 
-abcover_bylf_bystatus_meanSD <- cover_statuslf_matrix %>%
-  group_by(standtype, status, lifeform) %>%
-#  group_by(standtype = "intact", lifeform, status) %>%
-#  group_by(standtype = "matrix", lifeform, status) %>%
-# group_by(standtype = "degraded", lifeform, status) %>%
-  summarize(mean = mean(percentcover),
-            SD = sd(percentcover),
+```{r cover by lf by status - stats, include=TRUE}
+# SHRUB
+# highlight all and run as one command
+abcover_bylf_bystatus_aov_shrub <- aov(percentcover ~ standtype * status, data = cover_statuslf_matrix %>% 
+                                   filter((lifeform == 'shrub')))
+
+abcover_bylf_bystatus_aov_shrubnat <- aov(percentcover ~ standtype, data = cover_statuslf_matrix %>% 
+                                   filter((lifeform == 'shrub')) %>%  
+                                  filter((status == 'native')))
+print(summary(abcover_bylf_bystatus_aov_shrubnat))
+print(TukeyHSD(abcover_bylf_bystatus_aov_shrubnat))
+#$standtype
+#                      diff        lwr         upr     p adj
+#intact-degraded  0.5162602  0.2505030  0.78201736 0.0006178
+#matrix-degraded  0.2439024  0.0269126  0.46089228 0.0277839
+#matrix-intact   -0.2723577 -0.5381149 -0.00660053 0.0444896
+# significant differences in native shrub covoer among stands
+
+
+# FORB
+abcover_bylf_bystatus_aov_forb <- aov(percentcover ~ standtype * status, data = cover_statuslf_matrix %>% filter((lifeform == 'forb')))
+print(summary(abcover_bylf_bystatus_aov_forb))
+print(TukeyHSD(abcover_bylf_bystatus_aov_forb))
+## forb - native
+abcover_bylf_bystatus_aov_forbnat <- aov(percentcover ~ standtype, data = cover_statuslf_matrix %>% filter((lifeform == 'forb')) %>% filter((status == 'native')))
+print(summary(abcover_bylf_bystatus_aov_forbnat))
+print(TukeyHSD(abcover_bylf_bystatus_aov_forbnat))
+#$standtype
+#                      diff         lwr       upr     p adj
+#intact-degraded 0.02845528 -0.07182408 0.1287347 0.7352620
+#matrix-degraded 0.04065041 -0.04122735 0.1225282 0.4091252
+#matrix-intact   0.01219512 -0.08808424 0.1124745 0.9438944 
+# NO SIG differences
+# forb - nonnative
+abcover_bylf_bystatus_aov_forbnn <- aov(percentcover ~ standtype, data = cover_statuslf_matrix %>% filter((lifeform == 'forb')) %>% filter((status == 'nonnative')))
+print(summary(abcover_bylf_bystatus_aov_forbnn))
+print(TukeyHSD(abcover_bylf_bystatus_aov_forbnn))
+#$standtype
+#                      diff        lwr        upr     p adj
+#intact-degraded -0.5081301 -0.7957264 -0.2205337 0.0013474 <-- Int - Deg
+#matrix-degraded -0.3373984 -0.5722198 -0.1025769 0.0062271 <-- Mat - Deg
+#matrix-intact    0.1707317 -0.1168647  0.4583281 0.2896736
+
+# GRASS
+abcover_bylf_bystatus_aov_grass <- aov(percentcover ~ standtype * status, data = cover_statuslf_matrix %>% 
+                                   filter((lifeform == 'grass')))
+print(summary(abcover_bylf_bystatus_aov_grass))
+print(TukeyHSD(abcover_bylf_bystatus_aov_grass))
+## grass - native
+abcover_bylf_bystatus_aov_grassnat <- aov(percentcover ~ standtype, data = cover_statuslf_matrix %>% filter((lifeform == 'grass')) %>% filter((status == 'native')))
+print(summary(abcover_bylf_bystatus_aov_grassnat))
+print(TukeyHSD(abcover_bylf_bystatus_aov_grassnat))
+#$standtype
+#                       diff         lwr        upr     p adj
+#intact-degraded  0.56097561  0.36240594  0.7595453 0.0000191 <-- Int - Deg
+#matrix-degraded  0.07723577 -0.08489569  0.2393672 0.4370582
+#matrix-intact   -0.48373984 -0.68230951 -0.2851702 0.0000808 <-- Int - Mat
+# SIG MORE native grass at Intact
+# nonnative
+abcover_bylf_bystatus_aov_grassnn <- aov(percentcover ~ standtype, data = cover_statuslf_matrix %>% filter((lifeform == 'grass')) %>% filter((status == 'nonnative')))
+print(summary(abcover_bylf_bystatus_aov_grassnn))
+print(TukeyHSD(abcover_bylf_bystatus_aov_grassnn))
+#$standtype
+#                      diff        lwr         upr     p adj
+#intact-degraded -0.8089431 -1.0145691 -0.60331712 0.0000006 <-- 
+#matrix-degraded -0.2195122 -0.3874051 -0.05161929 0.0115409 <--
+#matrix-intact    0.5894309  0.3838049  0.79505687 0.0000165 <-- 
+# SIG different non-native grass among sites
+
+# FERN
+abcover_bylf_bystatus_aov_fern <- aov(percentcover ~ standtype * status, data = cover_statuslf_matrix %>% 
+                                   filter((lifeform == 'fern')))
+print(summary(abcover_bylf_bystatus_aov_fern))
+print(TukeyHSD(abcover_bylf_bystatus_aov_fern))
+## fern - native
+abcover_bylf_bystatus_aov_fernnat <- aov(percentcover ~ standtype, data = cover_statuslf_matrix %>% filter((lifeform == 'fern')) %>% filter((status == 'native')))
+print(summary(abcover_bylf_bystatus_aov_fernnat))
+print(TukeyHSD(abcover_bylf_bystatus_aov_fernnat))
+#$standtype <-- can't really do stats on only one occurrence
+#                         diff          lwr         upr   p adj
+#intact-degraded  8.130081e-03 -0.002714893 0.018975056 0.15458 
+#matrix-degraded  1.662443e-18 -0.008854884 0.008854884 1.00000
+#matrix-intact   -8.130081e-03 -0.018975056 0.002714893 0.15458
+# nonnative
+abcover_bylf_bystatus_aov_fernnn <- aov(percentcover ~ standtype, data = cover_statuslf_matrix %>% filter((lifeform == 'fern')) %>% filter((status == 'nonnative')))
+print(summary(abcover_bylf_bystatus_aov_fernnn))
+print(TukeyHSD(abcover_bylf_bystatus_aov_fernnn))
+
+abcover_bylf_bystatus_meanSD <- cover_statuslf_matrix %>%  
+  group_by(lifeform, status, standtype) %>% 
+  summarize(avg_cover = mean(percentcover), 
+            sd = sd(percentcover),
             N = length(percentcover), 
-            SE = ((sd(percentcover))/sqrt(length((percentcover)))))
-print(abcover_bylf_bystatus_meanSD)
+            se = ((sd(percentcover))/sqrt(length((percentcover)))))
 
 abcover_bylf_bystatus_meanSD$status_lifeform <- paste(abcover_bylf_bystatus_meanSD$status, abcover_bylf_bystatus_meanSD$lifeform, sep="_") # combine status and life form to one column
- 
-view(abcover_bylf_bystatus_meanSD)
-
-# test for df normality
+print(abcover_bylf_bystatus_meanSD) 
 ```
 
 ```{r plot abcover_bylf_meanSD, include = TRUE}
 # line 965 in Ch1_Degradation_original.Rmd
 
 #  column plot, 2 x 2 by lifeform
-abcover_bylf_bystatus_meanSD_plot_wrap <- ggplot(abcover_bylf_bystatus_meanSD, aes(x = standtype, y = mean_cover, fill = status )) +
+abcover_bylf_bystatus_meanSD_plot_wrap <- ggplot(abcover_bylf_bystatus_meanSD, aes(x = status, y = avg_cover, fill = standtype )) +
   facet_wrap(~ lifeform) +
   geom_col(position = "dodge", width = 0.8) +
-  geom_errorbar(aes(ymin=mean_cover-SD, ymax=mean_cover+SD), width=.2,
+  geom_errorbar(aes(ymin=avg_cover-se, ymax=avg_cover+se), width=.2,
                  position=position_dodge(.9)) +
-  labs(title = "Percent Cover by lifeform", x = "Stand Type", y = "Average Percent Cover") +
-  scale_fill_manual(values = c(statuscolors)) + # manual colors
+  labs(title = "Percent Cover by status and standtype", x = "Status", y = "Average Percent Cover (%)") +
+  scale_fill_manual(values = c(standcolors)) + # manual colors
 #   scale_fill_manual(values = cal_palette('chaparral3')) + # continuous colors
                        theme_bw()
+
 abcover_bylf_bystatus_meanSD_plot_wrap + scale_x_discrete(limits=c("intact", "matrix", "degraded"),
                                          labels=c("intact" = "Intact", "matrix" = "Matrix", "degraded" = "Degraded"))
 
 
-#  column plot, 2 x 2 by lifeform
-abcover_bylf_bystatus_meanSD_plot_wrap <- ggplot(abcover_bylf_bystatus_meanSD, aes(x = standtype, y = mean, fill = status )) +
-  facet_wrap(~ lifeform) +
-  geom_col(position = "dodge", width = 0.8) +
-  geom_errorbar(aes(ymin=mean-sd, ymax=mean+sd), width=.2,
-                 position=position_dodge(.9)) +
-  labs(title = "Percent Cover by status and lifeform", x = "Stand Type", y = "Average Percent Cover") +
-  scale_fill_manual(values = c('#D3E3CA', '#92A587', '#2F3525')) + # manual colors
-#   scale_fill_manual(values = cal_palette('chaparral3')) + # continuous colors
-                       theme_bw()
-abcover_bylf_bystatus_meanSD_plot_wrap + scale_x_discrete(limits=c("intact", "matrix", "degraded"),
-                                         labels=c("intact" = "Intact", "matrix" = "Matrix", "degraded" = "Degraded"))
 ```
 
 
